@@ -3,20 +3,20 @@ package io.github.redwallhp.villagerutils.commands.villager;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-
-import org.bukkit.ChatColor;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.AbstractVillager;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.MerchantRecipe;
-
+import io.github.redwallhp.villagerutils.TradeDraft;
 import io.github.redwallhp.villagerutils.VillagerUtils;
 import io.github.redwallhp.villagerutils.commands.AbstractCommand;
 import io.github.redwallhp.villagerutils.helpers.VillagerHelper;
+import org.jetbrains.annotations.NotNull;
 
 public class SetTradeCommand extends AbstractCommand implements TabCompleter {
 
@@ -36,20 +36,19 @@ public class SetTradeCommand extends AbstractCommand implements TabCompleter {
 
     @Override
     public boolean action(CommandSender sender, String[] args) {
-        if (!(sender instanceof Player)) {
-            sender.sendMessage(ChatColor.RED + "Console cannot edit villagers.");
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(Component.text("Console cannot edit villagers.", NamedTextColor.RED));
             return false;
         }
 
-        Player player = (Player) sender;
         AbstractVillager target = VillagerHelper.getAbstractVillagerInLineOfSight(player);
         if (target == null) {
-            player.sendMessage(ChatColor.RED + "You're not looking at a villager.");
+            player.sendMessage(Component.text("You're not looking at a villager.", NamedTextColor.RED));
             return false;
         }
 
         if (args.length != 1) {
-            player.sendMessage(ChatColor.RED + "Invalid arguments. Usage: " + getUsage());
+            player.sendMessage(Component.text("Invalid arguments. Usage: " + getUsage(), NamedTextColor.RED));
             return false;
         }
 
@@ -57,27 +56,35 @@ public class SetTradeCommand extends AbstractCommand implements TabCompleter {
         try {
             int position = Integer.parseInt(args[0]);
             if (position >= 1 && position <= recipes.size()) {
-                recipes.set(position - 1, plugin.getWorkspaceManager().getWorkspace(player));
+                TradeDraft draft = plugin.getWorkspaceManager().getWorkspace(player);
+                if (draft == null || !draft.isComplete()) {
+                    player.sendMessage(Component.text("You haven't finished setting up this trade!", NamedTextColor.RED));
+                    return false;
+                }
+                MerchantRecipe recipe = draft.toRecipe();
+
+                recipes.set(position - 1, recipe);
                 target.setRecipes(recipes);
-                player.sendMessage(ChatColor.DARK_AQUA + "Villager trade " + position + " set from your workspace.");
+                player.sendMessage(Component.text("Villager trade " + position + " set from your workspace.", NamedTextColor.DARK_AQUA));
                 return true;
             }
-        } catch (IllegalArgumentException ex) {
+        } catch (NumberFormatException ex) {
+            // fall through to error message below
         }
-        player.sendMessage(ChatColor.RED + "The position must be between 1 and the number of trades.");
+
+        player.sendMessage(Component.text("The position must be between 1 and the number of trades.", NamedTextColor.RED));
         return false;
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length == 2 && sender instanceof Player) {
-            Player player = (Player) sender;
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
+        if (args.length == 1 && sender instanceof Player player) {
             AbstractVillager target = VillagerHelper.getAbstractVillagerInLineOfSight(player);
             if (target != null) {
                 return IntStream.rangeClosed(1, target.getRecipeCount())
-                .mapToObj(i -> Integer.toString(i))
-                .filter(completion -> completion.startsWith(args[1]))
-                .collect(Collectors.toList());
+                        .mapToObj(Integer::toString)
+                        .filter(s -> s.startsWith(args[0]))
+                        .toList();
             }
         }
         return Collections.emptyList();
